# Favor

./: README.md  pyproject.toml
favor/plugins/dofavor/: __init__.py  config.py  state.py
