[project]
name = "Favor"
version = "0.1.0"
description = "Favor"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
plugins = []
plugin_dirs = ["favor/plugins"]
builtin_plugins = []
